--- a/css/index.css
+++ b/css/index.css
@@ -17,6 +17,9 @@ background: rgb(151, 252, 147);
   text-align: center;
 }
 
+.hero__text{
+  text-align: left;
+}
 
 .hero__image-container {
   display: flex;
